# vcpkg_scratch_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  helloworld.cc  helloworld.cpp  helloworld.h  qtbase编译补充的库.txt  vcpkg-configuration.json  vcpkg.json
